tests/ui/error-messages/type_error_suggestion.ko
//@ compile-fail
//@ error-code: E0200
module type_error_suggestion {
    meta { purpose: "Type error with suggestion in JSON" }

    fn bad() -> Int {
        return "hello"  //~ ERROR E0200
    }
}
